<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/bg_color_app">


        <TextView
            android:id="@+id/title"
            android:text="@string/txt_trivia_app"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/grey"
            style="@style/mainTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:text="@string/txt_question_num"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            style="@style/mainTextStyle"
            android:id="@+id/txt_question_num" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_question_num"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:elevation="12dp"
            android:backgroundTint="#1B213A"
            app:cardCornerRadius="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_question"
                style="@style/mainTextStyle"
                android:textColor="@color/white"
                android:padding="8dp" />


        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/bt_true"
            android:layout_width="392dp"
            android:text="@string/bt_true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/bt_false"
            android:layout_width="392dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            style="@style/ButtonStyle"
            android:text="@string/bt_false_txt"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/bt_false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.8"
            style="@style/ButtonStyle"
            android:text="@string/txt_next"
            android:id="@+id/bt_next" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


